database/adminer/service.yml
apiVersion: v1
kind: Service
metadata:
  name: guessaiword-service
spec:
  selector:
    app: guessaiword
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
